--- a/DOM_Assignments/cart.html
+++ b/DOM_Assignments/cart.html
@@ -15,7 +15,7 @@
         <li>Grapes</li>
         <li>Oat Milk</li>
      </ul>
-     <script src="domP2.js"></script>
+     <script src="homework.js"></script>
 </body>
 
 </html>
