--- a/AJAX/AJAX-Exercise1/index.html
+++ b/AJAX/AJAX-Exercise1/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="promises">
-        <h1>Hector's Promises</h1>
+        <h1>Hector's No Good Promises</h1>
 
         <div id="div1"></div>
         
